# api/handlers/v1/helper.go
@@ -4,7 +4,10 @@ import (
 	"encoding/json"
 	"strconv"
 
+	"github.com/dgrijalva/jwt-go"
 	"github.com/gin-gonic/gin"
+	t "github.com/golanguzb70/go-gin-bearer-auth-postgres-monolithic-template/api/tokens"
+	"github.com/spf13/cast"
 )
 
 func ParseLimitQueryParam(c *gin.Context) (int, error) {
@@ -22,4 +25,27 @@ func StructToStruct(from, to any) error {
 	}
 	err = json.Unmarshal(body, &to)
 	return err
+}
+
+func GetClaims(h handlerV1, c *gin.Context) (*t.CustomClaims, error) {
+	var (
+		claims = t.CustomClaims{}
+	)
+	strToken := c.GetHeader("Authorization")
+
+	token, err := jwt.Parse(strToken, func(t *jwt.Token) (interface{}, error) { return []byte(h.cfg.SignInKey), nil })
+
+	if err != nil {
+		h.log.Error("invalid access token")
+		return nil, err
+	}
+	rawClaims := token.Claims.(jwt.MapClaims)
+
+	claims.Sub = rawClaims["sub"].(string)
+	claims.Exp = rawClaims["exp"].(float64)
+	aud := cast.ToStringSlice(rawClaims["aud"])
+	claims.Aud = aud
+	claims.Role = rawClaims["role"].(string)
+	claims.Token = token
+	return &claims, nil
 }
